# physicx

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  settings.ini
include/: physics.hpp  utils.hpp  windows.hpp
modules/: FindBox2D.cmake
src/: main.cpp  physics.cpp  utils.cpp  windows.cpp
