cmake_minimum_required(VERSION 3.21.4)

set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS ON)

set(CMAKE_C_COMPILER /usr/bin/clang CACHE PATH "" FORCE)
set(CMAKE_CXX_COMPILER /usr/bin/clang++ CACHE PATH "" FORCE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++20 -fuse-ld=lld -Wno-unused-command-line-argument") # -v

set(CMAKE_C_FLAGS_INIT "-Wall")
set(CMAKE_C_FLAGS_DEBUG_INIT "-g")
set(CMAKE_C_FLAGS_MINSIZEREL_INIT "-Os -DNDEBUG")
set(CMAKE_C_FLAGS_RELEASE_INIT "-O3 -DNDEBUG")
set(CMAKE_C_FLAGS_RELWITHDEBINFO_INIT "-O2 -g")
set(CMAKE_CXX_FLAGS_INIT "-Wall")
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-g")
set(CMAKE_CXX_FLAGS_MINSIZEREL_INIT "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "-O2 -g")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project(PhysicX VERSION 1.0 DESCRIPTION "PhysicX Description" LANGUAGES CXX)

# THREADS_START
find_package(Threads REQUIRED)
message("CMAKE_THREAD_LIBS_INIT : " ${CMAKE_THREAD_LIBS_INIT})
# THREADS_START

# BOX2D_START
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

set(BOX2D_BUILD_UNIT_TESTS OFF)
set(BOX2D_BUILD_TESTBED OFF)
set(BOX2D_BUILD_DOCS OFF)
set(BOX2D_USER_SETTINGS OFF)
set(BUILD_SHARED_LIBS OFF)

add_subdirectory(${CMAKE_SOURCE_DIR}/extern/box2d)

set(BOX2D_INCLUDE_DIR ${box2d_SOURCE_DIR})
set(BOX2D_LIBRARIES box2d)

message("BOX2D_INCLUDE_DIR : " ${BOX2D_INCLUDE_DIR})
message("BOX2D_LIBRARIES   : " ${BOX2D_LIBRARIES})
# BOX2D_END


file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${BOX2D_INCLUDE_DIR})
set(PROJECT_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} ${BOX2D_LIBRARIES})

message("INCLUDE_DIRS           : " ${INCLUDE_DIRS})
message("PROJECT_LIBRARIES      : " ${PROJECT_LIBRARIES})
message("SRC_FILES              : " ${SRC_FILES})

add_executable(${PROJECT_NAME} ${SRC_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_LIBRARIES})
target_compile_options(${PROJECT_NAME} PUBLIC -pthread)
